# mx-template-py-fastapi-bed

./: .dockerignore  .editorconfig  .gitignore  LICENSE  README.md  README_zh.md  docker-compose.yml  dockerfile  pyproject.toml  start.bat
.github/workflows/: build-and-push.yml
configs/: config.py
src/: app.py  conf.py  log.py
src/models/: __init__.py  template.py  user.py
src/routers/: template.py  user.py
src/schemas/: message.py  perm.py  template.py  user.py
src/utils/: auth.py  db.py  deps.py
tools/: create_crud.py
